// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadProgressIndicator should render an active IN_PROGRESS UploadProgressIndicator 1`] = `
<View
  testID="active-upload-progress-indicator"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#0000004D",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "width": "100%",
        },
        Object {},
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="grey"
        hidesWhenStopped={true}
        size="small"
        testID="upload-progress-indicator"
      />
    </View>
  </View>
</View>
`;

exports[`UploadProgressIndicator should render an active RETRY UploadProgressIndicator 1`] = `
<View
  testID="active-upload-progress-indicator"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#0000004D",
          "height": "100%",
          "justifyContent": "center",
          "opacity": 0,
          "position": "absolute",
          "width": "100%",
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF00",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "width": "100%",
        },
        Object {},
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/reload1.png",
          }
        }
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
        testID="retry-upload-progress-indicator"
      />
    </View>
  </View>
</View>
`;

exports[`UploadProgressIndicator should render an inactive IN_PROGRESS UploadProgressIndicator 1`] = `
<View
  testID="inactive-upload-progress-indicator"
/>
`;

exports[`UploadProgressIndicator should render an inactive RETRY UploadProgressIndicator 1`] = `
<View
  testID="inactive-upload-progress-indicator"
/>
`;
